<resources>
    <string name="AdBlockerCouldNotUpdateTryAgain">Could not update the AdBlocker… Please try again later</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action">ACTION</string>
    <string name="action_back">Back</string>
    <string name="action_clear_search">Clear search</string>
    <string name="action_voice_search">Voice search</string>
    <string name="actionbar_item_download">downloader</string>
    <string name="actionbar_item_refresh">refresh</string>
    <string name="apkURLCopied">.APK url copied to your clipboard</string>
    <string name="apology_message_intent">The AnYme app was supposed to navigate to a specific screen but I guess something went wrong.</string>
    <string name="app_name">AnYme Beta</string>
    <string name="app_privacy_policy">app_privacy_policy</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bf">FjpLESkM5Si6DAz0ynjbZBBubBQZ8dqT</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="cast_ad_label">Ad</string>
    <string name="cast_casting_to_device">Casting to %1$s</string>
    <string name="cast_closed_captions">Closed captions</string>
    <string name="cast_closed_captions_unavailable">Closed captions unavailable</string>
    <string name="cast_connecting_to_device">Connecting to %1$s</string>
    <string name="cast_disconnect">Disconnect</string>
    <string name="cast_dynamic_group_name_format">%1$s + %2$d</string>
    <string name="cast_expanded_controller_ad_image_description">Image displayed while the cast receiver is playing an ad</string>
    <string name="cast_expanded_controller_ad_in_progress">Ad in progress…</string>
    <string name="cast_expanded_controller_background_image">Album art</string>
    <string name="cast_expanded_controller_live_head_description">Current position is at the head of the live stream</string>
    <string name="cast_expanded_controller_live_stream_indicator">Live stream</string>
    <string name="cast_expanded_controller_loading">Loading…</string>
    <string name="cast_expanded_controller_skip_ad_label">Skip Ad</string>
    <string name="cast_expanded_controller_skip_ad_text">You can skip ad in %1$d…</string>
    <string name="cast_forward">Forward</string>
    <string name="cast_forward_10">Forward ten seconds</string>
    <string name="cast_forward_30">Forward thirty seconds</string>
    <string name="cast_intro_overlay_button_text">@android:string/ok</string>
    <string name="cast_invalid_stream_duration_text">--:--</string>
    <string name="cast_invalid_stream_position_text">--:--</string>
    <string name="cast_live_label">LIVE</string>
    <string name="cast_mute">Mute</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_default_channel_name">Cast</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="cast_pause">Pause</string>
    <string name="cast_play">Play</string>
    <string name="cast_rewind">Rewind</string>
    <string name="cast_rewind_10">Rewind ten seconds</string>
    <string name="cast_rewind_30">Rewind thirty seconds</string>
    <string name="cast_seek_bar">Playback seek control</string>
    <string name="cast_skip_next">Skip to next item</string>
    <string name="cast_skip_prev">Skip to previous item</string>
    <string name="cast_stop">Stop</string>
    <string name="cast_stop_live_stream">Stop live stream</string>
    <string name="cast_tracks_chooser_dialog_audio">Audio</string>
    <string name="cast_tracks_chooser_dialog_cancel">Cancel</string>
    <string name="cast_tracks_chooser_dialog_closed_captions">Closed Captions</string>
    <string name="cast_tracks_chooser_dialog_default_track_name">Track %1$d</string>
    <string name="cast_tracks_chooser_dialog_none">None</string>
    <string name="cast_tracks_chooser_dialog_ok">OK</string>
    <string name="cast_tracks_chooser_dialog_subtitles">Subtitles</string>
    <string name="cast_unmute">Unmute</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.crashlytics.android.build_id">c57623d714e54ce59191dc0d0846ba06</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="continue_without_mal">Continue without a MyAnimeList account</string>
    <string name="copy">Copy</string>
    <string name="copy_device_info">copy_device_info</string>
    <string name="episode_picker_title">Set your Progress</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="improveAdBlockerDesc">Help improve the AdBlocker. This option will get disabled every time you restart the app.</string>
    <string name="is_this_safe">Is this safe??</string>
    <string name="myanimelist_unknown_series_count_message">Since it is unknown how many episodes this Anime has according to MyAnimeList, you have to manually enter how many episodes you have watched.</string>
    <string name="preference_key_author">preference_key_author</string>
    <string name="preference_key_change_username">preference_key_change_username</string>
    <string name="preference_key_clear_browser_data">preference_key_clear_browser_data</string>
    <string name="preference_key_clear_cache">preference_key_clear_cache</string>
    <string name="preference_key_discord">preference_key_discord</string>
    <string name="preference_key_kanon_login">preference_key_kanon_login</string>
    <string name="preference_key_link_ads">preference_key_link_ads</string>
    <string name="preference_key_manually_set_kanon_token">preference_key_manually_set_kanon_token</string>
    <string name="preference_key_migrate_to_alpha">preference_key_migrate_to_alpha</string>
    <string name="preference_key_open_android_settings">preference_key_open_android_settings</string>
    <string name="preference_key_optimize_database">preference_key_optimize_database</string>
    <string name="preference_key_recommend">preference_key_recommend</string>
    <string name="preference_key_reddit">preference_key_reddit</string>
    <string name="preference_key_relogin">preference_key_relogin</string>
    <string name="preference_key_show_percentage_anime_watched">preference_key_show_percentage_anime_watched</string>
    <string name="preference_key_use_vydia">preference_key_use_vydia_2</string>
    <string name="preference_key_version_name">preference_key_versionName</string>
    <string name="preference_menu_about">preference_menu_about</string>
    <string name="preference_menu_account">preference_menu_account</string>
    <string name="preference_menu_appearance">preference_menu_appearance</string>
    <string name="preference_menu_download">preference_menu_download</string>
    <string name="preference_menu_image_height">preference_menu_image_height</string>
    <string name="preference_menu_language">preference_menu_language</string>
    <string name="preference_menu_misc">preference_menu_misc</string>
    <string name="preference_menu_storage">preference_menu_storage</string>
    <string name="preference_menu_streaming">preference_menu_streaming</string>
    <string name="preference_menu_vydia">preference_menu_vydia</string>
    <string name="preference_vydia_enable_vertical_gesture">preference_vydia_enable_vertical_gesture</string>
    <string name="preference_vydia_enable_vertical_gesture_sensitivity">preference_vydia_enable_vertical_gesture_sensitivity</string>
    <string name="preference_vydia_remember_progress">preference_vydia_remember_progress</string>
    <string name="preferences_appearance_full_screen">preferences_appearance_full_screen</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="setup_login_button">Login</string>
</resources>