<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <CheckBoxPreference android:title="Improve AdBlocker" android:key="@string/preference_key_link_ads" android:summary="@string/improveAdBlockerDesc" android:defaultValue="false"/>
    <Preference android:icon="@drawable/ic_appearance" android:title="Appearance" android:key="@string/preference_menu_appearance"/>
    <Preference android:icon="@drawable/baseline_video_settings_white_24" android:title="Vydia" android:key="@string/preference_menu_vydia"/>
    <Preference android:icon="@drawable/ic_streaming" android:title="Streaming and Casting" android:key="@string/preference_menu_streaming"/>
    <Preference android:icon="@drawable/ic_download_unselected" android:title="Downloader" android:key="@string/preference_menu_download"/>
    <Preference android:icon="@drawable/ic_account" android:title="Account" android:key="@string/preference_menu_account"/>
    <Preference android:icon="@drawable/ic_misc" android:title="Miscellaneous" android:key="@string/preference_menu_misc"/>
    <Preference android:icon="@drawable/ic_storage" android:title="Storage" android:key="@string/preference_menu_storage"/>
    <Preference android:icon="@drawable/ic_about" android:title="About " android:key="@string/preference_menu_about"/>
    <Preference android:icon="@drawable/ic_language" android:title="Language " android:key="@string/preference_menu_language" android:summary="English"/>
</PreferenceScreen>
