<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <Preference android:title="Copy Device Info" android:key="@string/copy_device_info" android:summary="Share this when making a bug report"/>
    <Preference android:title="Privacy Policy" android:key="@string/app_privacy_policy"/>
    <Preference android:title="GitHub" android:key="@string/preference_key_author" android:summary="https://github.com/zunjae/AnYme"/>
    <Preference android:title="Reddit" android:key="@string/preference_key_reddit" android:summary="https://www.reddit.com/r/AnYme/"/>
    <Preference android:title="Discord" android:key="@string/preference_key_discord" android:summary="Help with the app development by trying out BETA updates.\10\10https://anyme.app/invite"/>
    <Preference android:title="Support AnYme" android:key="@string/preference_key_recommend" android:summary="If you want to support this app, please let other people know by linking them to the subreddit /r/anyme or website https://anyme.app."/>
    <Preference android:title="Version: XXX" android:key="@string/preference_key_version_name"/>
    <Preference android:title="Open Android Settings" android:key="@string/preference_key_open_android_settings"/>
</PreferenceScreen>
