<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:paddingLeft="24dp" android:paddingTop="36dp" android:paddingRight="24dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="24sp" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="30dp" android:text="Login with your MyAnimeList account"/>
        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:hint="Username (not your email)" style="@style/AnYmeOutlinedBox">
            <EditText android:id="@+id/inputUsername" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:hint="Password (optional)" style="@style/AnYmeOutlinedBox">
            <EditText android:id="@+id/inputPassword" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton android:id="@+id/loginButton" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:layout_marginBottom="24dp" android:text="Login" style="@style/AnYmeButton"/>
        <TextView android:textSize="16sp" android:gravity="center" android:id="@+id/setupForgotPassword" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="14dp" android:text="@string/forgot_your_password"/>
        <TextView android:textSize="16sp" android:gravity="center" android:id="@+id/isThisSafe" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="14dp" android:text="@string/is_this_safe"/>
        <TextView android:textSize="16sp" android:gravity="center" android:id="@+id/policy" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="14dp" android:text="@string/privacy_policy"/>
    </LinearLayout>
</ScrollView>
